@@ -22,7 +22,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.messaging.simp.SimpMessagingTemplate;
-import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
@@ -75,10 +74,9 @@ public class ChatServiceImplV2 implements ChatService {
         List<UserChat> privateChat = userChatRepository.findByTwoUserId(user.getId(), targetUser.getId());
 
         if (!privateChat.isEmpty()) { // 이미 갠톡 존재하는 경우 해당 채팅 입장.
-            UserChat userChat = privateChat.get(0);
-            Long chatId = userChat.getChat().getId();
+            Long chatId = privateChat.get(0).getChat().getId();
 
-            userChat.setToChatting();
+//            userChat.setToChatting();
 
             redisTemplate.opsForHash().put("user:"+user.getId()+":"+chatId, "isChatting", "true");
             redisTemplate.opsForHash().put("user:"+user.getId()+":"+chatId, "unReadMsg", "0");
@@ -92,7 +90,7 @@ public class ChatServiceImplV2 implements ChatService {
 
         List<UserChat> userChats = new ArrayList<>();
         UserChat newUserChat = UserChatConverter.toNewUserChat(user, targetUser, null, chat);
-        newUserChat.setToChatting();
+//        newUserChat.setToChatting();
         userChats.add(newUserChat);
         userChats.add(UserChatConverter.toNewUserChat(targetUser, user, null,  chat));
 
@@ -166,8 +164,13 @@ public class ChatServiceImplV2 implements ChatService {
 
         // 초대된 사용자 조회 - start
         List<Long> invitedUserIdList = inviteUserList.stream()
+                .peek(inviteDTO -> {
+                    redisTemplate.opsForHash().put("user:"+inviteDTO.getUserId()+":"+chatId, "isChatting", "true");
+                    redisTemplate.opsForHash().put("user:"+inviteDTO.getUserId()+":"+chatId, "unReadMsg", "0");
+                })
                 .map(ChatRequestDTO.InviteDTO::getUserId)
                 .toList();
+
         List<User> allInvitedUserList = userRepository.findAllById(invitedUserIdList);
         Map<Long, User> invitedUserMap = allInvitedUserList.stream()
                 .collect(Collectors.toMap(User::getId, invitedUser -> invitedUser));
@@ -181,13 +184,13 @@ public class ChatServiceImplV2 implements ChatService {
         List<UserChat> userChatList = userChatRepository.findAllByChat_IdJoinFetchUserAndProfile(chatId);
         List<String> existingUserNames = userChatList.stream()
                 .map(userChat -> userChat.getUser().getProfile().getName())
-                .collect(Collectors.toList());
+                .toList();
 
         List<String> newUserNames = inviteUserList.stream()
                 .map(ChatRequestDTO.InviteDTO::getName)
-                .collect(Collectors.toList());
+                .toList();
 
-        // 전체 참여자 이름 목록
+        // 전체 참여자 이름 목록 병합
         List<String> allParticipantNames = new ArrayList<>();
         allParticipantNames.addAll(existingUserNames);
         allParticipantNames.addAll(newUserNames);
@@ -213,14 +216,11 @@ public class ChatServiceImplV2 implements ChatService {
 
             String currentUserName = userChat.getUser().getProfile().getName();
 
-
-            Long currentUserId = userChat.getUser().getId();
-
             String otherName = allParticipantNames.stream()
                     .filter(name -> !name.equals(currentUserName))
                     .collect(Collectors.joining(", "));
 
-            log.info("{}'s name = {}", currentUserId, otherName);
+            log.info("{}'s name = {}", userChat.getUser().getId(), otherName);
 
             userChat.renameDefaultChatName(otherName);
         }
@@ -245,7 +245,7 @@ public class ChatServiceImplV2 implements ChatService {
         UserChat userChat = userChatRepository.findByUser_IdAndChat_Id(user.getId(), chatId).orElseThrow(() -> new ChatHandler(ErrorCode.WRONG_CHAT));
 
         // 사용자의 읽지 않은 메세지 수 0 + isChatting = true -> redis
-        userChat.setToChatting();
+//        userChat.setToChatting();
 
         redisTemplate.opsForHash().put("user:"+user.getId()+":"+chatId, "isChatting", "true");
         redisTemplate.opsForHash().put("user:"+user.getId()+":"+chatId, "unReadMsg", "0");
@@ -254,7 +254,7 @@ public class ChatServiceImplV2 implements ChatService {
 
     @Override
     @Transactional
-    public List<ChatResponseDTO.BroadcastMsgDTO> getChatHistory(Long chatId, Long cursor, User user) {
+    public List<ChatResponseDTO.BroadcastMsgDTO> getChatHistory(Long chatId, Long cursor, User user) { // paging!
 
         UserChat uc = userChatRepository.findByUser_IdAndChat_Id(user.getId(), chatId).orElseThrow(() -> new ChatHandler(ErrorCode.WRONG_CHAT));
         uc.setToChatting();
@@ -278,7 +278,9 @@ public class ChatServiceImplV2 implements ChatService {
     @Transactional
     public void leaveChat(Long chatId, User user) {
         UserChat userChat = userChatRepository.findByUser_IdAndChat_Id(user.getId(), chatId).orElseThrow(() -> new ChatHandler(ErrorCode.WRONG_CHAT));
-        userChat.setToNotChatting(); // -> redis
+//        userChat.setToNotChatting(); // -> redis
+
+        redisTemplate.opsForHash().put("user:"+user.getId()+":"+chatId, "isChatting", "false");
     }
 
     @Transactional
@@ -286,9 +288,11 @@ public class ChatServiceImplV2 implements ChatService {
         Chat chat = chatRepository.findById(chatId).orElseThrow(() -> new ChatHandler(ErrorCode.WRONG_CHAT));
         UserChat userChat = userChatRepository.findByUser_IdAndChat_Id(user.getId(), chatId).orElseThrow(() -> new ChatHandler(ErrorCode.WRONG_CHAT));
 
-
         // redis 삭제 로직 추가
         userChatRepository.delete(userChat);
+
+        redisTemplate.opsForHash().delete("user:"+user.getId()+":"+chatId, "isChatting");
+        redisTemplate.opsForHash().delete("user:"+user.getId()+":"+chatId, "unReadMsg");
 
         Integer participants = chat.getParticipants();
 
